--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <meta name="description" content="Unify is a standardized protocol which would enable seamless communication between devices." />
     <meta name="author" content="Zeeshan" />
+    <meta name="author-email" content="zeemailed@gmail.com" />
 
     <link href="css/unify.css" rel="stylesheet" />
 </head>
@@ -17,7 +18,11 @@
 
     <div class="fallback-message">
         <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-        <p>For the best experience please use the latest <b>Chrome</b> or <b>Safari</b> browser. Firefox 10 will also handle it.</p>
+        <p>For the best experience please use the latest <b>Chrome</b> or <b>Safari</b> or <b>Firefox</b> browser.</p>
+    </div>
+
+	<div id="contacts" class="step" data-x="-2000" data-y="-1200" data-z="10000" data-rotate="0" data-scale="1" align="left">
+        <p><i>The Zealots</i><br/><a href="mailto:zeemailed@gmail.com">Zeeshan</a><br/><a href="mailto:faizan.khan.007@gmail.com">Faizan</a><br/><a href="mailto:rahilasyed90@gmail.com">Rahila</a><br/><a href="mailto:bhagyashreemandora@gmail.com">Bhagyashree</a><br/></p>
     </div>
 
     <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
@@ -26,11 +31,11 @@
         <span class="footnote"><sup>*</sup> a Seamless Device Communication Protocol</span>
     </div>
 
-    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
+    <div title="basic-concept" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
         <p>It is <br/> ● a Standard communication protocol using  <i>cloud</i> <br/> ● a Common platform to applications <br/> ● Extensible</p>
     </div>
 
-    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
+    <div id="func" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
         <p>access functionality of <b>One</b> <span class="device">device</span></p>
     </div>
 
@@ -38,42 +43,41 @@
         <p>from <i>another</i></p>
     </div>
 
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
+    <div id="specification" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
         <p>it's a <b class="positioning">peer to peer</b>, <b class="rotating">full duplex</b> and <b class="scaling">application layer</b> protocol</p>
     </div>
 
-    <div id="ing" class="step" data-x="6700" data-y="-300" data-scale="6">
+    <div id="specification" class="step" data-x="6700" data-y="-300" data-scale="6">
         <p>The protocol commands include <b class="scaling">Iam</b>, <b class="rotating">Send</b> and <b class="positioning">Request</b></p>
     </div>
 
-    <div id="source" class="step" data-x="7300" data-y="2700" data-rotate="20" data-scale="4">
+    <div id="architecture" class="step" data-x="7300" data-y="2700" data-rotate="20" data-scale="4">
         <p>here's the </p>
         <q><a href="arch.wmv" target="_blank">Architecture</a><br/>of the protocol</q>
     </div>
 
-    <div id="onemorething" class="step" data-x="6000" data-y="4000" data-scale="2">
+    <div class="step" data-x="6000" data-y="4000" data-scale="2">
         <p>one more thing...</p>
     </div>
 
-    <div id="one-more-thing" align="center" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2" style="width:1200px">
+    <div id="oauth-json" align="center" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2" style="width:1200px">
         <p><span class="wehave">we have</span> <span class="used">used</span> <span class="oauth"><i>Oauth</i></span> <span class="for">for </span> <span class="authentication"><i>Authentication</i></span></p> & <br/>
         <span class="json" style="border:ridge; border-width:thick"><i>JSON</i> instead of <i>XML</i></span>
     </div>
 
- <div id="incident" class="step slide" data-x="-1000" data-y="-1500" data-rotate-x="-90" data-rotate-y="90">
+ <div id="advantages" class="step slide" data-x="-1000" data-y="-1500" data-rotate-x="-90" data-rotate-y="90">
         <q><b><center><zee>Advantages</zee></center></b><br/>● Ease and convenience of communication<br/><br/>● Single credential<br/><br/>● No distance barrier<br/><br/>● Privacy<br/><br/>● Ease for developer<br/><br/>● Abstraction to communication<br/><br/>● Can add more apps if needed</q>
     </div>
 
-    <div class="step slide" data-x="0" data-y="-1500" data-rotate-x="-90" data-rotate-y="0">
+    <div id="achievements" class="step slide" data-x="0" data-y="-1500" data-rotate-x="-90" data-rotate-y="0">
         <q><b><center><zee>Achievements</zee></center><br/>● 1st Prize at QUARK’12 (OpenShowcase), BITS GOA<br/>● 1st Prize at Intexication’12 , MIT Pune<br/>● 1st Prize at Techlligent’12 , PCCOE Pune<br/>● 1st Prize at Source Code’12 , SCOE Pune<br/>● 3rd Prize at Solutions’12 , AIT Pune<br/>● IEEE Paper Selected for Conference Presentation at UKSim 14th International Conference on Computer Modelling and Simulation, UKSim2012, Cambridge University, UK<br/>● Finalist at Techkriti, IIT Kanpur<br/>● Newspaper Article at IIT Kanpur by audience popularity</q>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-1500" data-rotate-x="-90" data-rotate-y="-90" style="background-image:url(git.png);background-repeat:no-repeat; background-position: bottom right;">
-        <q><zee>Well, here's the <br/><br/><a href="http://www.github.com/Bhagyashree-Mandora/Sync-App">Github Repository</a> of Unify.</zee><br/><br/>www.github.com/Bhagyashree-Mandora/Sync-App<br/><br/><zee>Feel free to fork it and we would love to have your suggestions and inputs!<br/><br/><br/><image> </image></zee></q>
+    <div id="git" class="step slide" data-x="1000" data-y="-1500" data-rotate-x="-90" data-rotate-y="-90" style="background-image:url(git.png);background-repeat:no-repeat; background-position: bottom right;">
+        <q><zee>Well, here's the <br/><br/><a href="http://www.github.com/Bhagyashree-Mandora/Sync-App">Github Repository</a> of Unify.</zee><br/><br/>www.github.com/Bhagyashree-Mandora/Sync-App<br/><br/><zee>Feel free to fork it and we would love to have your suggestions and inputs!<br/><br/>Contacts<br/><image> </image></zee></q>
     </div>
 	
-	<div class="step slide" data-x="2000" data-y="-1500" data-rotate-x="-90" data-rotate-y="-180" style="background-image:url(thank.gif);background-repeat:no-repeat;background-position:center"/>
-
+	<div id="thanks" class="step slide" data-x="2000" data-y="-1500" data-rotate-x="-90" data-rotate-y="-180" style="background-image:url(thank.gif);background-repeat:no-repeat;background-position:center"/>
 
     <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
     </div>
